bootstrap/istio-config/templates/grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
    - grafana.lab.sorsby.co
  gateways:
    - istio-system/sorsby-co-gateway
  http:
    - route:
        - destination:
            host: monitoring-grafana.monitoring.svc.cluster.local
            port:
              number: 80
