bootstrap/istio-config/templates/homeassistant-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: home-assistant-vs
  namespace: home-assistant
spec:
  hosts:
    - home-assistant.lab.sorsby.co
  gateways:
    - istio-system/sorsby-co-gateway
  http:
    - route:
        websocketUpgrade: true
        timeout: 0s
        - destination:
            host: home-assistant.home-assistant.svc.cluster.local
            port:
              number: 8080
