bootstrap/istio-config/templates/prometheus-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  hosts:
    - prometheus.lab.sorsby.co
  gateways:
    - istio-system/sorsby-co-gateway
  http:
    - route:
        - destination:
            host: monitoring-kube-prometheus-prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
